// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`batch swap flow handles all the events: broadcast 1`] = `
{
  "abortedAt": null,
  "abortedBlockIndex": null,
  "chain": "Bitcoin",
  "createdAt": Any<Date>,
  "id": Any<BigInt>,
  "nativeId": 5n,
  "replacedById": null,
  "requestedAt": 1970-01-01T00:00:06.000Z,
  "requestedBlockIndex": "1-280",
  "succeededAt": 1970-01-01T00:00:12.000Z,
  "succeededBlockIndex": "2-296",
  "type": "BATCH",
  "updatedAt": Any<Date>,
}
`;

exports[`batch swap flow handles all the events: egress 1`] = `
{
  "amount": "312780",
  "broadcastId": Any<BigInt>,
  "chain": "Bitcoin",
  "createdAt": Any<Date>,
  "id": Any<BigInt>,
  "nativeId": 1n,
  "scheduledAt": 1970-01-01T00:00:06.000Z,
  "scheduledBlockIndex": "1-260",
  "updatedAt": Any<Date>,
}
`;

exports[`batch swap flow handles all the events: fee 0 1`] = `
{
  "amount": "10000000",
  "asset": "ETH",
  "id": Any<BigInt>,
  "swapId": Any<BigInt>,
  "type": "INGRESS",
}
`;

exports[`batch swap flow handles all the events: fee 1 1`] = `
{
  "amount": "990109",
  "asset": "USDC",
  "id": Any<BigInt>,
  "swapId": Any<BigInt>,
  "type": "NETWORK",
}
`;

exports[`batch swap flow handles all the events: fee 2 1`] = `
{
  "amount": "100000000000000",
  "asset": "ETH",
  "id": Any<BigInt>,
  "swapId": Any<BigInt>,
  "type": "LIQUIDITY",
}
`;

exports[`batch swap flow handles all the events: fee 3 1`] = `
{
  "amount": "1485163",
  "asset": "USDC",
  "id": Any<BigInt>,
  "swapId": Any<BigInt>,
  "type": "LIQUIDITY",
}
`;

exports[`batch swap flow handles all the events: fee 4 1`] = `
{
  "amount": "349476",
  "asset": "BTC",
  "id": Any<BigInt>,
  "swapId": Any<BigInt>,
  "type": "EGRESS",
}
`;

exports[`batch swap flow handles all the events: swap 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "createdAt": Any<Date>,
  "depositAmount": "100000000010000000",
  "depositReceivedAt": 1970-01-01T00:00:06.000Z,
  "depositReceivedBlockIndex": "1-20",
  "destAddress": "mp3QSoPN2iLKrEhdz9Qb9DSJQAuNwDDa77",
  "destAsset": "BTC",
  "egressId": Any<BigInt>,
  "id": Any<BigInt>,
  "intermediateAmount": "990109107",
  "nativeId": 1n,
  "srcAsset": "ETH",
  "swapDepositChannelId": Any<BigInt>,
  "swapExecutedAt": 1970-01-01T00:00:06.000Z,
  "swapExecutedBlockIndex": "1-250",
  "swapInputAmount": "100000000000000000",
  "swapOutputAmount": "662256",
  "txHash": null,
  "type": "SWAP",
  "updatedAt": Any<Date>,
}
`;
